oprava načítání seznamu aplikací do objektu user + změna hesla.
