# server/src/main/java/cz/ess/server/user/UserController.java
@@ -1,7 +1,9 @@
 package cz.ess.server.user;
 
+import cz.ess.server.user.exchange.ChangeUserPasswordRequest;
 import cz.ess.server.user.exchange.UserListResponse;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
@@ -18,5 +20,12 @@ public class UserController {
     @PostMapping("/all")
     public UserListResponse getAllUsersForAdmin(@RequestHeader(HttpHeaders.AUTHORIZATION) String authorization) {
         return userService.getAllUsersForAdmin(authorization);
+    }
+
+    @PostMapping("/change-password")
+    @ResponseStatus(HttpStatus.OK)
+    public void changePassword(@RequestBody ChangeUserPasswordRequest changeUserPasswordRequest)
+    {
+        userService.changePassword(changeUserPasswordRequest);
     }
 }
